构建huffuman树